--- a/package.json
+++ b/package.json
@@ -3,5 +3,8 @@
     "connect": "^3.7.0",
     "cors": "^2.8.5",
     "express": "^4.18.1"
+  },
+  "scripts": {
+    "start": "nodemon server.js"
   }
 }
