--- a/package.json
+++ b/package.json
@@ -2,7 +2,11 @@
   "dependencies": {
     "connect": "^3.7.0",
     "cors": "^2.8.5",
-    "express": "^4.18.1"
+    "ejs": "^3.1.8",
+    "express": "^4.18.1",
+    "express-handlebars": "^6.0.6",
+    "handlebars": "^4.7.7",
+    "pug": "^3.0.2"
   },
   "scripts": {
     "start": "nodemon server.js"
