--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "express": "^4.18.1",
     "express-handlebars": "^6.0.6",
     "handlebars": "^4.7.7",
-    "pug": "^3.0.2"
+    "pug": "^3.0.2",
+    "socket.io": "^4.5.2"
   },
   "scripts": {
     "start": "nodemon server.js"
