--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "knex": "^2.3.0",
     "mysql": "^2.18.1",
     "pug": "^3.0.2",
-    "socket.io": "^4.5.2"
+    "socket.io": "^4.5.2",
+    "sqlite3": "^5.1.2"
   },
   "scripts": {
     "start": "nodemon server.js"
