--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "knex": "^2.3.0",
     "mongoose": "^6.7.2",
     "mysql": "^2.18.1",
+    "normalizr": "^3.6.2",
     "pug": "^3.0.2",
     "socket.io": "^4.5.2",
     "sqlite3": "^5.1.2"
