--- a/package.json
+++ b/package.json
@@ -1,11 +1,16 @@
 {
   "dependencies": {
     "@faker-js/faker": "^7.6.0",
+    "bootstrap": "^5.2.2",
     "connect": "^3.7.0",
+    "connect-mongo": "^4.6.0",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
     "ejs": "^3.1.8",
     "express": "^4.18.1",
     "express-handlebars": "^6.0.6",
+    "express-session": "^1.17.3",
     "faker": "^6.6.6",
     "handlebars": "^4.7.7",
     "knex": "^2.3.0",
