--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "faker": "^6.6.6",
     "handlebars": "^4.7.7",
     "knex": "^2.3.0",
+    "minimist": "^1.2.7",
     "mongoose": "^6.7.2",
     "mysql": "^2.18.1",
     "normalizr": "^3.6.2",
@@ -22,7 +23,8 @@
     "passport-local": "^1.0.0",
     "pug": "^3.0.2",
     "socket.io": "^4.5.2",
-    "sqlite3": "^5.1.2"
+    "sqlite3": "^5.1.2",
+    "yargs": "^17.6.2"
   },
   "scripts": {
     "start": "nodemon server.js"
