serverMode env variable created

--- a/TP13/.env
+++ b/TP13/.env
@@ -3,3 +3,5 @@ MONGOATLAS_URL = "mongodb+srv://estebanmaxposse:GetStuff8@ecommerce.qwzmjs0.mong
 SESSION_KEY = 'secret'
 NODE_ENV = 'development'
 HOST = '127.0.0.1'
+SERVER_MODE = 'fork'
+BACKEND_URL = 'http://localhost:8080'
