--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "@faker-js/faker": "^7.6.0",
     "bcrypt": "^5.1.0",
     "bootstrap": "^5.2.2",
+    "compression": "^1.7.4",
     "connect": "^3.7.0",
     "connect-mongo": "^4.6.0",
     "cookie-parser": "^1.4.6",
@@ -13,6 +14,7 @@
     "express-handlebars": "^6.0.6",
     "express-session": "^1.17.3",
     "faker": "^6.6.6",
+    "gzip": "^0.1.0",
     "handlebars": "^4.7.7",
     "knex": "^2.3.0",
     "minimist": "^1.2.7",
