--- a/package.json
+++ b/package.json
@@ -23,9 +23,12 @@
     "normalizr": "^3.6.2",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
+    "pino": "^8.8.0",
+    "pino-http": "^8.3.0",
     "pug": "^3.0.2",
     "socket.io": "^4.5.2",
     "sqlite3": "^5.1.2",
+    "winston": "^3.8.2",
     "yargs": "^17.6.2"
   },
   "scripts": {
